Changed Pr to add square. Figure still needs to be changed.

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.10 2009/10/08 14:58:43 ith Exp $
+% $Id: results.tex,v 1.11 2009/10/12 10:24:10 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.10 2009/10/08 14:58:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.11 2009/10/12 10:24:10 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -136,7 +136,7 @@ for all time steps calculated.
 }\qquad
 % 
 \subfloat[Power spectrum of scalar perturbations][Power spectrum of scalar
-perturbations $\mathcal{P}_{\delta\varphi} =
+perturbations $\mathcal{P}^2_{\delta\varphi} =
 \frac{k^3}{2\pi^2}|\delta\varphi|^2$.]{
 \includegraphics[width=0.43\textwidth]{numerical/graphs/Pphi-kwmap-nohoriz-small}
 \label{fig:Pphi-kwmap}
