--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.29 2009/10/12 10:23:55 ith Exp $
+% $Id: numerical.tex,v 1.30 2009/10/12 15:56:31 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.29 2009/10/12 10:23:55 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.30 2009/10/12 15:56:31 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -81,7 +81,7 @@ Section~\ref{sec:pots-num} and the steps taken to establish the values of the
 required parameters are outlined. The initial conditions used for the first order
 perturbations are the Bunch-Davies vacuum conditions as specified in
 Section~\ref{sec:perts-intro}. At second order the perturbations are set to be
-indentically zero at the beginning of the simulation as explained in
+identically zero at the beginning of the simulation as explained in
 Section~\ref{sec:initconds-num}. The section also describes the method and timing of
 the initialisation of the variables.
 
