Removed old section.

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.12 2009/10/12 15:56:46 ith Exp $
+% $Id: results.tex,v 1.13 2009/10/12 15:57:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.12 2009/10/12 15:56:46 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.13 2009/10/12 15:57:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -289,41 +289,9 @@ exited the horizon. The $k$ range shown here is $K_1=\left[ 1.9\e{-5}, 0.039
 
 
 All the results quoted so far are for
-the $\msqphisq$ model. We have also tested the $\lambdaphifour$ model and
-compared it to
-$\msqphisq$. Figure~\ref{fig:src-mvl-main} compares the models for $\kwmap$.
-Figure~\ref{fig:src-mvl-zoom} shows how the source term for the $\lambdaphifour$
-model is larger
-than the one for $\msqphisq$ to begin, but crosses over after a few e-foldings.
-After horizon
-crossing the $\lambdaphifour$ source term is again larger. As the results at
-first order for both
-models are so similar it is to be expected that the second order perturbations
-would be closely
-related. 
+the $\msqphisq$ model. 
 % 
-\begin{figure}
-\centering
- \subfloat[Comparison of full evolution][The $\lambdaphifour$
-model (green dashed line) initially has a
-larger source term but becomes smaller than the $\msqphisq$ model as evolution
-continues. After horizon crossing the $\lambdaphifour$ term is slightly
-larger.]{
- \includegraphics[width=0.43\textwidth]{numerical/graphs/src-mvl-small}
- \label{fig:src-mvl}
-}\qquad
-% 
-\subfloat[Comparison at early times][The crossover between the models at the early
-stages of the
-simulation, before horizon 
-crossing.]{
-\includegraphics[width=0.43\textwidth]{numerical/graphs/src-mvl-zoom-small}
-\label{fig:src-mvl-zoom}
-}
-\caption[Comparison of the $\lambdaphifour$ and $\msqphisq$ models]{A comparison of 
-the source term for the $\msqphisq$ and $\lambdaphifour$ models.}
-\label{fig:src-mvl-main}
-\end{figure}
+
 % 
 
 
