Added equation label.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.49 2009/10/12 18:10:42 ith Exp $
+% $Id: mainintro.tex,v 1.50 2009/10/13 19:09:23 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.49 2009/10/12 18:10:42 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.50 2009/10/13 19:09:23 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1198,6 +1198,7 @@ non-linearity is localised in real space the parameter is
 known as the local non-Gaussianity $\fnlloc$: 
 % 
 \begin{equation} 
+\label{eq:fnllocdefn-intro}
 {\cal{R}} = {\cal{R}}_G + \frac{3}{5} \fnlloc  (
 {\cal{R}}_G^2 -\langle {\cal{R}}_G^2 \rangle )\,.
 \end{equation}
